   * Properly compute weapon range with launch_range modifiers
   * Fixed some range checks with inrange weapon sets
   * Fixed Empire Pacifier mass being too low
   * Fixed warning when looking at internal flow amplifier descriptions
   * Removed Soromid Ira turret and forward weapon stats
   * Fixed reality rip and avatar of sirichana abilities giving errors when the AI tries to use them
   * `zalek/blackhole/zbh09`: don't error out when a bioship ceases to exist
   * `kidnapped/traffic_00`: fixed formatting string telling the player what system to go to
   * `kidnapped/traffic_01`: ship should spawn if taking off in the same system, not just jumping in
   * `tutorial/nelly01`: fixed derelict message not appearing
   * `minerva/pirate4`: fixed save me spam only being print once
   * `neutral/seek_n_destroy`: fixed warnings when taking off in the same system
   * `sirius/achack/achack01`: fixed not being able to accept mission
   * `dvaered/dv_diversion`: fixed not being able to accept mission
   * `dvaered/dv_bikers`: don't allow the player to use escorts and properly update mission TODO
   * `sirius/achack03`: fixed not being able to complete the mission
   * `neutral/kidnapped`: fixed inconsistency in the name of the system to go to
   * `shadow/shadowrun`: fixed VN issues not allowing mission completion
   * `shadow/shadowrun`: changed locations to make it possible to do in the allotted time-frame
   * `shadow/shadowvigil`: fixed Seiryuu not appearing
   * `shiplover`: don't ask the player about ships they can't obtain
   * Fixed many typos
   * Translation updates

* 0.11.0
   * Fixed beams only showing hit explosions on one target being hit instead of all
   * Consider beam width when computing collisions
   * Made beam effects a bit thinner
   * Point defense weapons should track fighters much better now
   * Fixed point defense weapons not firing properly
   * Approach no longer instantly starts autonav unless a space object or derelict is already targeted